manifests/api1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api1-service
  labels:
    app: api1
    service: api1
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: api1
