manifests/web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1-service
  labels:
    app: web1
    service: web1
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: web1
